--- a/_posts/2017-10-07-mask-r-cnn.md
+++ b/_posts/2017-10-07-mask-r-cnn.md
@@ -2,7 +2,7 @@
 layout: post
 mathjax: true
 category: deep_learning
-title: DenseNet
+title: Mask R-CNN
 tags: mask_r-cnn deep_learning object_detection
 author: Alvin Zhu
 date: 2017-10-07
@@ -11,7 +11,7 @@ date: 2017-10-07
 * content
 {:toc}
 
-Mask R-CNN.
+我们提出了一个概念上简单，灵活和通用的目标分割框架。我们的方法有效地检测图像中的目标，同时为每个实例生成高质量的分割掩码。称为Mask R-CNN的方法通过添加一个与现有目标检测框回归并行的，用于预测目标掩码的分支来扩展Faster R-CNN。Mask R-CNN训练简单，相对于Faster R-CNN，只需增加一个较小的开销，运行速度可达5 FPS。此外，Mask R-CNN很容易推广到其他任务，例如，允许我们在同一个框架中估计人的姿势。我们在COCO挑战的所有三个项目中取得了最佳成绩，包括目标分割，目标检测和人体关键点检测。在没有使用额外技巧的情况下，Mask R-CNN优于所有现有的单一模型，包括COCO 2016挑战优胜者。我们希望我们的简单而有效的方法将成为一个促进未来目标级识别领域研究的坚实基础。我们稍后将提供代码。
 
 
 
