--- a/_posts/2017-10-07-densenet.md
+++ b/_posts/2017-10-07-densenet.md
@@ -11,7 +11,7 @@ date: 2017-10-07
 * content
 {:toc}
 
-密集连接卷积网络(Densely Connected Convolutional Networks).
+密集连接卷积网络(Densely Connected Convolutional Networks)全文翻译。
 
 
 
