--- a/_posts/2017-10-07-python-pep-8.md
+++ b/_posts/2017-10-07-python-pep-8.md
@@ -2,7 +2,7 @@
 layout: post
 mathjax: true
 category: programing
-title: Python PEP-8: Style Guide for Python Code
+title: Python PEP-8 Style Guide for Python Code
 tags: python pep-8 code-style programing
 author: Alvin Zhu
 date: 2017-10-07
