--- a/_posts/2017-10-09-r-cnn.md
+++ b/_posts/2017-10-09-r-cnn.md
@@ -413,7 +413,7 @@ human detection. In CVPR, 2005.
 [^18]: S. Fidler, R. Mottaghi, A. Yuille, and R. Urtasun. Bottom-up segmentation for top-down detection. In CVPR, 2013. 4, 5
 [^19]: K. Fukushima. Neocognitron: A self-organizing neural network model for a mechanism of pattern recognition unaffected by shift in position. Biological cybernetics,
 36(4):193–202, 1980. 1
-[^20]: R. Girshick, P. Felzenszwalb, and D. McAllester. Discriminatively trained deformable part models, release 5. http://www.cs.berkeley.edu/~rbg/latent-v5/.
+[^20]: R. Girshick, P. Felzenszwalb, and D. McAllester. Discriminatively trained deformable part models, release 5. [http://www.cs.berkeley.edu/\~rbg/latent-v5/](http://www.cs.berkeley.edu/\~rbg/latent-v5/).
 [^21]: C. Gu, J. J. Lim, P. Arbeláez, and J. Malik. Recognition using regions. In CVPR, 2009. 2
 [^22]: B. Hariharan, P. Arbeláez, L. Bourdev, S. Maji, and J. Malik.
 Semantic contours from inverse detectors. In ICCV, 2011.
