--- a/_posts/2017-10-12-resnet.md
+++ b/_posts/2017-10-12-resnet.md
@@ -2,7 +2,7 @@
 layout: post
 mathjax: true
 category: deep_learning
-title: ResNet
+title: ResNet 论文翻译
 tags: resnet faster_r-cnn deep_learning object_detection recognition
 author: Alvin Zhu
 date: 2017-10-12
@@ -11,19 +11,15 @@ date: 2017-10-12
 * content
 {:toc}
 
-ResNet全文翻译。
-
-
-
-
-
-# ResNet
-
 ## 摘要
 
 更深的神经网络更难训练。我们提出了一种残差学习框架来减轻网络训练，这些网络比以前使用的网络更深。我们明确地将层变为学习关于层输入的残差函数，而不是学习未参考的函数。我们提供了全面的经验证据说明这些残差网络很容易优化，并可以显著增加深度来提高准确性。在ImageNet数据集上我们评估了深度高达152层的残差网络——比VGG[40]深8倍但仍具有较低的复杂度。这些残差网络的集合在ImageNet测试集上取得了3.57%的错误率。这个结果在ILSVRC 2015分类任务上赢得了第一名。我们也在CIFAR-10上分析了100层和1000层的残差网络。
 
 对于许多视觉识别任务而言，表示的深度是至关重要的。仅由于我们非常深度的表示，我们便在COCO目标检测数据集上得到了28%的相对提高。深度残差网络是我们向ILSVRC和COCO 2015竞赛提交的基础，我们也赢得了ImageNet检测任务，ImageNet定位任务，COCO检测和COCO分割任务的第一名。
+
+
+
+
 
 ## 1. 引言
 
