调整Post排版、标签

--- a/_posts/2017-10-07-densenet.md
+++ b/_posts/2017-10-07-densenet.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 mathjax: true
-category: deep_learning
-title: DenseNet
-tags: densenet deep_learning classification recognition
+category: 深度学习
+title: DenseNet 密集连接卷积网络 论文翻译
+tags: DenseNet 深度学习 分类 识别
 author: Alvin Zhu
 date: 2017-10-07
 ---
@@ -11,17 +11,14 @@ date: 2017-10-07
 * content
 {:toc}
 
-密集连接卷积网络(Densely Connected Convolutional Networks)全文翻译。
-
-
-
-
-
-# 密集连接卷积网络
-
 ## 摘要
 
 最近的工作表明，如果卷积网络在靠近输入的层与靠近输出的层之间包含更短的连接，那么卷积网络的深度可以显著增加，准确度更高，并且更易于训练。在本文中，我们采纳这一观点，并提出了密集连接卷积网络(DenseNet)，它以前馈的方式将每个层与每个其它层连接起来。具有L层的传统卷积网络具有L个连接（每个层与其后续层之间），而我们的网络具有的连接个数为：$\frac{L(L+1)}{2}$。对于每个层，所有先前层的特征图都被用作本层的输入，并且本层输出的特征图被用作所有后续层的输入。DenseNet有几个优点：它们可以减轻梯度弥散问题，加强特征传播，鼓励特征重用，大大减少参数数量。我们在四个竞争激烈的对象识别基准任务(CIFAR-10, CIFAR-100, SVHN, ImageNet)上对我们提出的网络架构进行评估。相较于其它最先进的方法，DenseNet在大多数情况下都有显著的改善，同时要求较少的算力以实现高性能。代码和预训练的模型可以在https://github.com/liuzhuang13/DenseNet上找到。
+
+
+
+
+
 
 ## 简介
 
