--- a/_posts/2017-10-07-python-pep-8.md
+++ b/_posts/2017-10-07-python-pep-8.md
@@ -1,21 +1,15 @@
 ---
 layout: post
 mathjax: true
-category: programing
-title: Python PEP-8 Style Guide for Python Code
-tags: python pep-8 code-style programing
+category: 编程
+title: Python PEP-8编码风格指南中文版
+tags: Python PEP-8 编码风格 编程
 author: Alvin Zhu
 date: 2017-10-07
 ---
 
 * content
 {:toc}
-
-Python PEP-8编码风格指南中文版。
-
-
-
-
 
 #PEP 8 -- Python编码风格指南
 
@@ -37,6 +31,11 @@ Python PEP-8编码风格指南中文版。
 语言自身在发生着改变，随着新的规范的出现和旧规范的过时，代码风格也会随着时间演变。
 
 很多项目都有自己的一套风格指南。若和本指南有任何冲突，应该优先考虑其项目相关的那套指南。
+
+
+
+
+
 
 ## 保持盲目的一致是头脑简单的表现(A Foolish Consistency Is The Hobgoblin Of Little Minds)[^3]
 
