--- a/_posts/2017-10-10-fast-r-cnn.md
+++ b/_posts/2017-10-10-fast-r-cnn.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 mathjax: true
-category: deep_learning
-title: Fast R-CNN
-tags: fast_r-cnn deep_learning object_detection
+category: 深度学习
+title: Fast R-CNN 论文翻译
+tags: Fast_R-CNN 深度学习 目标检测
 author: Alvin Zhu
 date: 2017-10-10
 ---
@@ -11,17 +11,14 @@ date: 2017-10-10
 * content
 {:toc}
 
-Fast R-CNN全文翻译。
-
-
-
-
-
-# Fast R-CNN
-
 ## 摘要
 
 本文提出了一种快速的基于区域的卷积网络方法（fast R-CNN）用于目标检测。Fast R-CNN建立在以前使用的深卷积网络有效地分类目标的成果上。相比于之前的成果，Fast R-CNN采用了多项创新提高训练和测试速度来提高检测精度。Fast R-CNN训练非常深的VGG16网络比R-CNN快9倍，测试时间快213倍，并在PASCAL VOC上得到更高的精度。与SPPnet相比，fast R-CNN训练VGG16网络比他快3倍，测试速度快10倍，并且更准确。Fast R-CNN的Python和C ++（使用Caffe）实现以MIT开源许可证发布在：[https://github.com/rbgirshick/fast-rcnn](https://github.com/rbgirshick/fast-rcnn)。
+
+
+
+
+
 
 ## 简介
 
