--- a/_posts/2017-10-12-resnet.md
+++ b/_posts/2017-10-12-resnet.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 mathjax: true
-category: deep_learning
+category: 深度学习
 title: ResNet 论文翻译
-tags: resnet faster_r-cnn deep_learning object_detection recognition
+tags: ResNet faster_r-cnn 深度学习 目标检测 识别
 author: Alvin Zhu
 date: 2017-10-12
 ---
