--- a/_posts/2017-10-07-python-pep-8.md
+++ b/_posts/2017-10-07-python-pep-8.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 mathjax: true
-category: 编程
+category: 开发
 title: Python PEP-8编码风格指南中文版
-tags: Python PEP-8 编码风格 编程
+tags: Python PEP-8 编码风格 开发
 author: Alvin Zhu
 date: 2017-10-07
 ---
