--- a/_posts/2018-10-10-fscrypt.md
+++ b/_posts/2018-10-10-fscrypt.md
@@ -12,7 +12,14 @@ date: 2018-10-10
 {:toc}
 为了保护电脑中的重要文件，需要将其加密，以防止重要资料泄露。类似用户登陆密码这些是没有用的，攻击者也许无法登陆你的电脑，但是可以使用U盘启动，直接看你硬盘上面的文件，甚至直接把硬盘盗走。
 
-那么如何应对这种情况呢？通常有以下几种方案。
+那么如何应对这种情况呢？
+
+
+
+
+
+
+通常有以下几种方案。
 
 **Windows NTFS EFS**
 
